Add more declarative smokeTests to test that dom mutations are properly upgraded

--- a/Components/CustomDOMElement/smokeTests/DeclarativeComponent/mutations.html
+++ b/Components/CustomDOMElement/smokeTests/DeclarativeComponent/mutations.html
@@ -3,9 +3,9 @@
 <head>
   <title>Declarative Component</title>
   <script src="../../../components-polyfill.js"></script>
-  <link rel="components" href="x-component.html">
+  <link rel="components" href="mutations-components.html">
 </head>
 <body>
-  <x-component></x-component>
+  <x-foo></x-foo>
 </body>
 </html>
